--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,7 @@ Authors@R:
     person("Andreas Gammelgaard", "Damsbo", , "agdamsbo@clin.au.dk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7559-1154"))
 Description: R functions for convenient data management an danalysis in health research.
+    The package is mainly collected for personal use.
     For a start this package migrates functions from the agdamsbo/daDoctoR-package.
 License: GPL-3
 Encoding: UTF-8
