no errors! whoop whoop!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,8 @@ export(age_calc)
 export(cpr_check)
 export(cpr_dob)
 export(cpr_female)
-export(plot_ord_odds)
+export(plot_olr)
 export(quantile_cut)
+import(MASS)
+import(ggplot2)
+import(stats)
