Added the generic_stroke() function and bumped version number.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: stRoke
 Title: Tools for work in clinical stroke research
-Version: 0.22.9.3
+Version: 0.22.9.4
 Authors@R: 
     person("Andreas Gammelgaard", "Damsbo", , "agdamsbo@clin.au.dk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7559-1154"))
@@ -19,5 +19,7 @@ Language: en-US
 Config/testthat/edition: 3
 Imports: 
     ggplot2,
+    gtsummary,
     MASS,
+    rankinPlot,
     stats
