--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,13 @@ export(age_calc)
 export(cpr_check)
 export(cpr_dob)
 export(cpr_female)
+export(generic_stroke)
 export(plot_olr)
 export(quantile_cut)
 import(MASS)
 import(ggplot2)
 import(stats)
+importFrom(MASS,polr)
+importFrom(gtsummary,add_overall)
+importFrom(gtsummary,tbl_summary)
+importFrom(rankinPlot,grottaBar)
