new function source_lines() and version bump.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(cpr_female)
 export(generic_stroke)
 export(plot_olr)
 export(quantile_cut)
+export(source_lines)
 import(ggplot2)
 import(stats)
 importFrom(MASS,polr)
