--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,17 @@ export(cpr_check)
 export(cpr_dob)
 export(cpr_female)
 export(generic_stroke)
+export(index_plot)
 export(plot_olr)
 export(quantile_cut)
 export(source_lines)
 import(ggplot2)
 import(stats)
+import(tidyr)
 importFrom(MASS,polr)
+importFrom(dplyr,filter)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
 importFrom(gtsummary,add_overall)
 importFrom(gtsummary,tbl_summary)
 importFrom(rankinPlot,grottaBar)
