ajusting imports of dependicies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,12 +11,19 @@ export(plot_olr)
 export(quantile_cut)
 export(source_lines)
 import(ggplot2)
-import(stats)
-import(tidyr)
 importFrom(MASS,polr)
-importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(gtsummary,add_overall)
 importFrom(gtsummary,tbl_summary)
 importFrom(rankinPlot,grottaBar)
+importFrom(stats,as.formula)
+importFrom(stats,coef)
+importFrom(stats,confint)
+importFrom(stats,formula)
+importFrom(stats,lm)
+importFrom(stats,quantile)
+importFrom(stats,reorder)
+importFrom(tidyr,all_of)
+importFrom(tidyr,ends_with)
+importFrom(tidyr,pivot_longer)
