new function, label_select() as a helper for gtsummary(). also new version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(cpr_dob)
 export(cpr_female)
 export(generic_stroke)
 export(index_plot)
+export(label_select)
 export(plot_olr)
 export(quantile_cut)
 export(source_lines)
