--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,12 @@ export(index_plot)
 export(label_select)
 export(plot_olr)
 export(quantile_cut)
+export(read_redcap_data)
 export(source_lines)
 import(ggplot2)
 importFrom(MASS,polr)
+importFrom(REDCapR,redcap_read)
+importFrom(REDCapRITS,REDCap_split)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(gtsummary,add_overall)
