--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,7 @@ export(index_plot)
 export(label_select)
 export(plot_olr)
 export(quantile_cut)
-export(read_redcap_data)
+export(read_redcap_tables)
 export(source_lines)
 import(ggplot2)
 importFrom(MASS,polr)
