--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,8 +16,10 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 LazyData: true
 Suggests:
+    knitr,
     REDCapRITS (>= 0.2.2.1),
     remotes,
+    rmarkdown,
     spelling,
     testthat (>= 3.0.0)
 Language: en-US
@@ -34,5 +36,6 @@ Imports:
     tidyr
 Depends: 
     R (>= 2.10)
-Remotes:  
+Remotes: 
     agdamsbo/REDCapRITS
+VignetteBuilder: knitr
