--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,8 @@
 pandoc: 2.19.2
 pkgdown: 2.0.7
 pkgdown_sha: ~
-articles: {}
-last_built: 2023-01-03T13:19Z
+articles:
+  Simple REDCap workflow: Simple REDCap workflow.html
+  Toolbox: Toolbox.html
+last_built: 2023-01-04T07:42Z
 
