--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,7 +2,7 @@ pandoc: 2.19.2
 pkgdown: 2.0.7
 pkgdown_sha: ~
 articles:
-  Simple REDCap workflow: Simple REDCap workflow.html
-  Toolbox: Toolbox.html
-last_built: 2023-01-04T07:42Z
+  redcap: redcap.html
+  toolbox: toolbox.html
+last_built: 2023-01-04T13:44Z
 
