major documentation overhaul

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(ci_plot)
 export(cpr_check)
 export(cpr_dob)
 export(cpr_female)
+export(files_filter)
 export(generic_stroke)
 export(index_plot)
 export(label_select)
@@ -13,6 +14,7 @@ export(quantile_cut)
 export(read_redcap_tables)
 export(source_lines)
 import(ggplot2)
+import(utils)
 importFrom(MASS,polr)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
@@ -20,9 +22,11 @@ importFrom(gtsummary,add_overall)
 importFrom(gtsummary,tbl_summary)
 importFrom(rankinPlot,grottaBar)
 importFrom(stats,as.formula)
+importFrom(stats,binomial)
 importFrom(stats,coef)
 importFrom(stats,confint)
 importFrom(stats,formula)
+importFrom(stats,glm)
 importFrom(stats,lm)
 importFrom(stats,quantile)
 importFrom(stats,reorder)
