--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: stRoke
-Title: Clinical stroke research toolbox
-Version: 0.23.1.2
+Title: Clinical Stroke Research Toolbox
+Version: 0.23.1.3
 Authors@R: 
     person("Andreas Gammelgaard", "Damsbo", , "agdamsbo@clin.au.dk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7559-1154"))
@@ -33,7 +33,8 @@ Imports:
     rankinPlot,
     REDCapR,
     stats,
-    tidyr
+    tidyr,
+    utils
 Depends: 
     R (>= 2.10)
 Remotes: 
