--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,9 @@ export(cpr_dob)
 export(cpr_female)
 export(files_filter)
 export(generic_stroke)
+export(gt_plot)
 export(index_plot)
 export(label_select)
-export(plot_olr)
 export(quantile_cut)
 export(read_redcap_tables)
 export(source_lines)
@@ -18,14 +18,17 @@ import(utils)
 importFrom(MASS,polr)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
+importFrom(gt,gtsave)
 importFrom(gtsummary,add_overall)
+importFrom(gtsummary,as_gt)
 importFrom(gtsummary,tbl_summary)
+importFrom(magick,image_ggplot)
+importFrom(magick,image_read)
 importFrom(rankinPlot,grottaBar)
 importFrom(stats,as.formula)
 importFrom(stats,binomial)
 importFrom(stats,coef)
 importFrom(stats,confint)
-importFrom(stats,formula)
 importFrom(stats,glm)
 importFrom(stats,lm)
 importFrom(stats,quantile)
