--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: stRoke
 Title: Clinical Stroke Research Toolbox
-Version: 0.23.1.3
+Version: 0.23.1.4
 Authors@R: 
     person("Andreas Gammelgaard", "Damsbo", , "agdamsbo@clin.au.dk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7559-1154"))
@@ -28,7 +28,9 @@ Imports:
     cli,
     dplyr,
     ggplot2,
+    gt,
     gtsummary,
+    magick,
     MASS,
     rankinPlot,
     REDCapR,
