--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: stRoke
 Title: Clinical Stroke Research Toolbox
-Version: 0.23.1.4
+Version: 23.1.5
 Authors@R: 
     person("Andreas Gammelgaard", "Damsbo", , "agdamsbo@clin.au.dk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7559-1154"))
@@ -8,6 +8,7 @@ Description: This is an R-toolbox of custom functions for convenient data manage
     and analysis in clinical health research and teaching.
     The package is mainly collected for personal use, but any use beyond that is encouraged.
     This package has migrated functions from the agdamsbo/daDoctoR-package, and new functions has been added.
+    Versioning follows months and year. See NEWS.md for release notes.
 URL: https://agdamsbo.github.io/stRoke/, https://github.com/agdamsbo/stRoke, https://agdamsbo.github.io/neuRo-group/
 BugReports: https://github.com/agdamsbo/stRoke/issues
 License: GPL-3
