here we go again. please build!

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,8 @@ Suggests:
     remotes,
     rmarkdown,
     spelling,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    webshot2
 Language: en-US
 Config/testthat/edition: 3
 Imports: 
