gt_plot() is out due to errors. New function win_prop() is in. See NEWS.md.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,8 +22,7 @@ Suggests:
     remotes,
     rmarkdown,
     spelling,
-    testthat (>= 3.0.0),
-    webshot2
+    testthat (>= 3.0.0)
 Language: en-US
 Config/testthat/edition: 3
 Imports: 
