--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(label_select)
 export(quantile_cut)
 export(read_redcap_tables)
 export(source_lines)
+export(win_prob)
 import(ggplot2)
 import(utils)
 importFrom(MASS,polr)
@@ -26,8 +27,11 @@ importFrom(stats,coef)
 importFrom(stats,confint)
 importFrom(stats,glm)
 importFrom(stats,lm)
+importFrom(stats,pnorm)
+importFrom(stats,qnorm)
 importFrom(stats,quantile)
 importFrom(stats,reorder)
+importFrom(stats,xtabs)
 importFrom(tidyr,all_of)
 importFrom(tidyr,ends_with)
 importFrom(tidyr,pivot_longer)
