--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,19 @@
 Package: stRoke
-Title: Clinical Stroke Research Toolbox
-Version: 23.1.6
+Title: Clinical Stroke Research
+Version: 23.1.7
 Authors@R: 
     person("Andreas Gammelgaard", "Damsbo", , "agdamsbo@clin.au.dk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7559-1154"))
+Author:
+    Kraglund et al (2018) <doi:10.1161/STROKEAHA.117.020067>,
+    Zou et al (2022) <doi:10.1161/STROKEAHA.121.037744>,
+    Becker (2020) <doi:10.18637/jss.v093.i02>
 Description: This is an R-toolbox of custom functions for convenient data management 
     and analysis in clinical health research and teaching.
     The package is mainly collected for personal use, but any use beyond that is encouraged.
-    This package has migrated functions from the agdamsbo/daDoctoR-package, and new functions has been added.
+    This package has migrated functions from 'agdamsbo/daDoctoR', and new functions has been added.
     Versioning follows months and year. See NEWS.md for release notes.
-URL: https://agdamsbo.github.io/stRoke/, https://github.com/agdamsbo/stRoke, https://agdamsbo.github.io/neuRo-group/
+URL: https://agdamsbo.github.io/stRoke/, https://github.com/agdamsbo/stRoke
 BugReports: https://github.com/agdamsbo/stRoke/issues
 License: GPL-3
 Encoding: UTF-8
@@ -18,26 +22,20 @@ RoxygenNote: 7.2.3
 LazyData: true
 Suggests:
     knitr,
-    REDCapRITS (>= 0.2.2.1),
-    remotes,
     rmarkdown,
     spelling,
     testthat (>= 3.0.0)
 Language: en-US
 Config/testthat/edition: 3
 Imports: 
-    cli,
     dplyr,
     ggplot2,
     gtsummary,
     MASS,
     rankinPlot,
-    REDCapR,
     stats,
     tidyr,
     utils
 Depends: 
     R (>= 2.10)
-Remotes: 
-    agdamsbo/REDCapRITS
 VignetteBuilder: knitr
