--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,15 +4,14 @@ Version: 23.1.7
 Authors@R: 
     person("Andreas Gammelgaard", "Damsbo", , "agdamsbo@clin.au.dk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7559-1154"))
-Author:
-    Kraglund et al (2018) <doi:10.1161/STROKEAHA.117.020067>,
-    Zou et al (2022) <doi:10.1161/STROKEAHA.121.037744>,
-    Becker (2020) <doi:10.18637/jss.v093.i02>
 Description: This is an R-toolbox of custom functions for convenient data management 
     and analysis in clinical health research and teaching.
     The package is mainly collected for personal use, but any use beyond that is encouraged.
     This package has migrated functions from 'agdamsbo/daDoctoR', and new functions has been added.
-    Versioning follows months and year. See NEWS.md for release notes.
+    Version follows months and year. See NEWS/Changelog for release notes.
+    This package includes sampled data from the TALOS trial (Kraglund et al (2018) <doi:10.1161/STROKEAHA.117.020067>).
+    The 'win_prob()' function is based on work by Zou et al (2022) <doi:10.1161/STROKEAHA.121.037744>.
+    The 'age_calc()' function is based on work by Becker (2020) <doi:10.18637/jss.v093.i02>.
 URL: https://agdamsbo.github.io/stRoke/, https://github.com/agdamsbo/stRoke
 BugReports: https://github.com/agdamsbo/stRoke/issues
 License: GPL-3
