--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,8 +10,8 @@ Description: This is an R-toolbox of custom functions for convenient data manage
     This package has migrated functions from 'agdamsbo/daDoctoR', and new functions has been added.
     Version follows months and year. See NEWS/Changelog for release notes.
     This package includes sampled data from the TALOS trial (Kraglund et al (2018) <doi:10.1161/STROKEAHA.117.020067>).
-    The 'win_prob()' function is based on work by Zou et al (2022) <doi:10.1161/STROKEAHA.121.037744>.
-    The 'age_calc()' function is based on work by Becker (2020) <doi:10.18637/jss.v093.i02>.
+    The win_prob() function is based on work by Zou et al (2022) <doi:10.1161/STROKEAHA.121.037744>.
+    The age_calc() function is based on work by Becker (2020) <doi:10.18637/jss.v093.i02>.
 URL: https://agdamsbo.github.io/stRoke/, https://github.com/agdamsbo/stRoke
 BugReports: https://github.com/agdamsbo/stRoke/issues
 License: GPL-3
