--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,11 @@
 
 export(age_calc)
 export(ci_plot)
+export(contrast_text)
 export(cpr_check)
 export(cpr_dob)
 export(cpr_female)
+export(ds2dd)
 export(files_filter)
 export(generic_stroke)
 export(index_plot)
@@ -21,6 +23,7 @@ importFrom(calendar,ic_write)
 importFrom(dplyr,if_else)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
+importFrom(grDevices,col2rgb)
 importFrom(gtsummary,add_overall)
 importFrom(gtsummary,tbl_summary)
 importFrom(lubridate,dminutes)
