--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: stRoke
 Title: Clinical Stroke Research
-Version: 23.1.8
+Version: 23.4.1
 Authors@R: 
     person("Andreas Gammelgaard", "Damsbo", , "agdamsbo@clin.au.dk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7559-1154"))
@@ -30,6 +30,7 @@ Imports:
     calendar,
     dplyr,
     ggplot2,
+    grDevices,
     gtsummary,
     lubridate,
     MASS,
