--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,6 +2,7 @@ pandoc: 2.19.2
 pkgdown: 2.0.7
 pkgdown_sha: ~
 articles:
+  ds2dd: ds2dd.html
   toolbox: toolbox.html
-last_built: 2023-01-27T08:32Z
+last_built: 2023-04-12T12:06Z
 
