--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: stRoke
 Title: Clinical Stroke Research
-Version: 23.5.1
+Version: 23.6.1
 Authors@R: 
     person("Andreas Gammelgaard", "Damsbo", , "agdamsbo@clin.au.dk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7559-1154"))
@@ -21,6 +21,7 @@ RoxygenNote: 7.2.3
 LazyData: true
 Suggests:
     covr,
+    devtools,
     knitr,
     rmarkdown,
     spelling,
