--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(print,win_Prob)
 export(age_calc)
 export(ci_plot)
+export(color_plot)
 export(contrast_text)
 export(cpr_check)
 export(cpr_dob)
@@ -25,6 +26,9 @@ importFrom(dplyr,if_else)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(grDevices,col2rgb)
+importFrom(graphics,par)
+importFrom(graphics,rect)
+importFrom(graphics,text)
 importFrom(gtsummary,add_overall)
 importFrom(gtsummary,tbl_summary)
 importFrom(lubridate,dminutes)
