new function pase_calc() with sample data and a version bump

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(files_filter)
 export(generic_stroke)
 export(index_plot)
 export(label_select)
+export(pase_calc)
 export(quantile_cut)
 export(source_lines)
 export(win_prob)
