New description and changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(print,win_Prob)
 export(age_calc)
+export(chunks_of_n)
 export(ci_plot)
 export(color_plot)
 export(contrast_text)
@@ -13,9 +14,11 @@ export(files_filter)
 export(generic_stroke)
 export(index_plot)
 export(label_select)
+export(n_chunks)
 export(pase_calc)
 export(quantile_cut)
 export(source_lines)
+export(str_extract)
 export(win_prob)
 export(write_ical)
 import(ggplot2)
