--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,10 +11,12 @@ export(cpr_check)
 export(cpr_dob)
 export(cpr_female)
 export(ds2dd)
+export(ds2ical)
 export(files_filter)
 export(generic_stroke)
 export(index_plot)
 export(label_select)
+export(mfi_domains)
 export(n_chunks)
 export(pase_calc)
 export(quantile_cut)
