--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,17 +20,11 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 LazyData: true
 Suggests:
-    covr,
-    devtools,
     knitr,
     rmarkdown,
-    spelling,
-    usethis,
     testthat,
     git2r,
-    pak,
-    here,
-    rhub
+    here
 Config/testthat/edition: 3
 Imports: 
     calendar,
