multiple updates and additions. see 'NEWS.md'

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: stRoke
 Title: Clinical Stroke Research
-Version: 24.2.1
+Version: 24.10.1
 Authors@R: 
     person("Andreas Gammelgaard", "Damsbo", , "agdamsbo@clin.au.dk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7559-1154"))
@@ -17,7 +17,7 @@ BugReports: https://github.com/agdamsbo/stRoke/issues
 License: GPL-3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 LazyData: true
 Suggests:
     knitr,
@@ -25,7 +25,11 @@ Suggests:
     testthat,
     git2r,
     here,
-    spelling
+    spelling,
+    usethis,
+    pak,
+    roxygen2,
+    devtools
 Config/testthat/edition: 3
 Imports: 
     calendar,
