--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,8 @@ Version: 24.10.1
 Authors@R: 
     person("Andreas Gammelgaard", "Damsbo", , "agdamsbo@clin.au.dk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7559-1154"))
-Description: This is an R-toolbox of custom functions for convenient data management 
-    and analysis in clinical health research and teaching.
+Description: A collection of tools for clinical trial data management and 
+    analysis in research and teaching.
     The package is mainly collected for personal use, but any use beyond that is encouraged.
     This package has migrated functions from 'agdamsbo/daDoctoR', and new functions has been added.
     Version follows months and year. See NEWS/Changelog for release notes.
@@ -34,7 +34,6 @@ Imports:
     calendar,
     dplyr,
     ggplot2,
-    glue,
     grDevices,
     gtsummary,
     lubridate,
